--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="home_img">
-                <img src="/img/me.jpeg" alt="">
+                <img src="./img/me.jpeg" alt="">
             </div>
         </section>
 
@@ -55,7 +55,7 @@
 
             <div class="about_container bd-grid">
                 <div class="about_img">
-                    <img src="/img/about-pic.jpg" alt="">
+                    <img src="./img/about-pic.jpg" alt="">
                 </div>
 
                 <div>
@@ -153,7 +153,7 @@
                 </div>
 
                 <div>
-                    <img src="/img/work3.jpg" alt="" class="skills_img">
+                    <img src="./img/work3.jpg" alt="" class="skills_img">
                 </div>
             </div>
         </section>
@@ -164,22 +164,22 @@
 
             <div class="work_container bd-grid">
                 <div class="work_img">
-                    <img src="/img/work1.jpg" alt="">
+                    <img src="./img/work1.jpg" alt="">
                 </div>
                 <div class="work_img">
-                    <img src="/img/work2.jpg" alt="">
+                    <img src="./img/work2.jpg" alt="">
                 </div>
                 <div class="work_img">
-                    <img src="/img/work3.jpg" alt="">
+                    <img src="./img/work3.jpg" alt="">
                 </div>
                 <div class="work_img">
-                    <img src="/img/work4.jpg" alt="">
+                    <img src="./img/work4.jpg" alt="">
                 </div>
                 <div class="work_img">
-                    <img src="/img/work5.jpg" alt="">
+                    <img src="./img/work5.jpg" alt="">
                 </div>
                 <div class="work_img">
-                    <img src="/img/work6.jpg" alt="">
+                    <img src="./img/work6.jpg" alt="">
                 </div>
             </div>
         </section>
