--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--===== MAIN JS =====-->
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
